# orbit

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini
adapters/minimal/: adapter.py
app/: __init__.py  main.py
app/api/: auth.py  mcp_models.py  mcp_tools.py  routes_admin.py  routes_discovery.py  routes_mcp.py  routes_mcp_sse.py  routes_oauth.py  routes_operations.py  routes_providers.py  routes_syncs.py  routes_troubleshooting.py
app/core/: bootstrap.py  logging.py  middleware.py  scheduler.py  security.py  settings.py
app/data/: sync_mapping.py
app/domain/: conflicts.py  mapping.py  models.py
app/infra/: caldav_client.py  db.py  skylight_client.py
app/mcp/: __init__.py
app/providers/: __init__.py  apple_caldav.py  base.py  registry.py  skylight.py
app/sdk/: __init__.py  context.py  errors.py  provider.py
app/services/: admin_service.py  event_service.py  oauth_service.py  operation_processor.py  operation_service.py  provider_config_validator.py  provider_event_service.py  provider_registry.py  provider_service.py  sync_crud_service.py  sync_definition_service.py  sync_service.py  troubleshooting_service.py  user_service.py
tests/: README.md  conftest.py
tests/contracts/: test_head_provider.py  test_openapi.py  test_validate.py
tests/helpers/: db_teardown.py
tests/integration/: test_mcp_pytest.py  test_orbit_mcp_integration.py
tests/sdk/: test_minimal_adapter.py
ui/: .env.example  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
(+69 files in other folders)
